--- a/Analysis/analysis_script.Rmd
+++ b/Analysis/analysis_script.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example Confirmatory Data Analysis Plan"
+title: "Example Confirmatory Data Analysis Script"
 output: html_notebook
 ---
 
